<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".fragments.CreateRecipeStepOneFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0"
        android:layout_weight="9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp12"
                android:layout_marginTop="@dimen/dp5"
                android:layout_marginRight="@dimen/dp10"
                android:text="I.Thông Tin Chung"
                android:textSize="@dimen/sp18"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp150"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"
                android:gravity="center">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/dp5"
                        android:gravity="center_horizontal|bottom"
                        android:text="Click để tải ảnh đại diện cho công thức"
                        android:textSize="@dimen/sp15" />

                    <ImageView
                        android:id="@+id/img_avatar_recipe"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="1.5dp"
                        android:paddingTop="2dp"
                        android:layout_marginLeft="@dimen/dp15"
                        android:layout_marginRight="@dimen/dp15"
                        android:paddingRight="1.5dp"
                        android:paddingBottom="@dimen/dp2"
                        android:src="@drawable/ic_add_picture" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/dp15"
                        android:layout_marginLeft="@dimen/dp15"
                        android:src="@drawable/custom_frame_border" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginRight="@dimen/dp10"
                        android:text="*"
                        android:textColor="@color/colorMain"
                        android:textSize="@dimen/sp20"
                        android:textStyle="bold" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/custom_frame_input"
                        android:hint="Nhập tên công thức"
                        android:layout_marginLeft="@dimen/dp15"
                        android:layout_marginRight="@dimen/dp15"
                        android:padding="@dimen/dp12"
                        android:textSize="@dimen/sp16" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginRight="@dimen/dp10"
                        android:text="*"
                        android:textColor="@color/colorMain"
                        android:textSize="@dimen/sp20"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp130"
                        android:layout_marginTop="@dimen/dp10"
                        android:background="@drawable/custom_frame_input"
                        android:gravity="top"
                        android:layout_marginRight="@dimen/dp15"
                        android:layout_marginLeft="@dimen/dp15"
                        android:hint="@string/nh_p_n_i_dung_c_ng_th_c"
                        android:padding="@dimen/dp12"
                        android:textSize="@dimen/sp16" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginTop="@dimen/dp10"
                        android:layout_marginRight="@dimen/dp10"
                        android:text="*"
                        android:textColor="@color/colorMain"
                        android:textSize="@dimen/sp20"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp10"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="@dimen/dp0"
                            android:layout_height="wrap_content"
                            android:layout_weight="6.5"
                            android:text="Đây là công thức nấu ăn cho"
                            android:textSize="@dimen/sp16"
                            android:textStyle="bold" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginTop="@dimen/dp10"
                            android:layout_marginRight="@dimen/dp10"
                            android:text="*"
                            android:textColor="@color/colorMain"
                            android:textSize="@dimen/sp20"
                            android:textStyle="bold" />

                        <EditText
                            android:layout_width="@dimen/dp0"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp10"
                            android:layout_marginRight="@dimen/dp10"
                            android:layout_weight="2"
                            android:background="@drawable/custom_frame_input_important"
                            android:gravity="center"
                            android:hint="0"
                            android:inputType="number"
                            android:padding="@dimen/dp5"
                            android:textSize="@dimen/sp16" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="người"
                            android:textSize="@dimen/sp16"
                            android:textStyle="bold" />
                    </LinearLayout>


                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp10"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="@dimen/dp0"
                            android:layout_height="wrap_content"
                            android:layout_weight="2.8"
                            android:text="Thời gian nấu"
                            android:textSize="@dimen/sp16"
                            android:textStyle="bold" />
                        <TextView
                            android:layout_weight="3.2"
                            android:layout_width="@dimen/dp0"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginTop="@dimen/dp10"
                            android:layout_marginRight="@dimen/dp10"
                            android:text="*"
                            android:textColor="@color/colorMain"
                            android:textSize="@dimen/sp20"
                            android:textStyle="bold" />
                        <EditText
                            android:layout_width="@dimen/dp0"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/dp10"
                            android:layout_weight="1.7"
                            android:background="@drawable/custom_frame_input"
                            android:gravity="center"
                            android:hint="0"
                            android:inputType="number"
                            android:padding="@dimen/dp5"
                            android:textSize="@dimen/sp16" />

                        <TextView
                            android:layout_width="@dimen/dp0"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="phút"
                            android:textSize="@dimen/sp16"
                            android:textStyle="bold" />
                    </LinearLayout>

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_marginBottom="@dimen/dp15"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="@dimen/dp5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="Độ Khó"
                        android:textSize="@dimen/sp16"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp8"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <TextView
                            android:id="@+id/txt_level_repice"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/dp2"
                            android:layout_weight="9.5"
                            android:gravity="center_vertical"
                            android:text="@string/d"
                            android:textSize="@dimen/sp16" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:src="@drawable/ic_arrow_drop_down" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp1"
                        android:layout_marginRight="@dimen/dp14"
                        android:background="@color/colorGray" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_next_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp30"
            android:layout_marginRight="@dimen/dp30"
            android:background="@drawable/custom_button_next_step"
            android:text="@string/next_step"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</LinearLayout>